// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldsSection should render default textField section 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  padding-left: 24px !important;
  padding-right: 24px !important;
  margin-left: 0;
  margin-right: 0;
  padding: 8px 0;
}

.c2 .kirk-textField-wrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  color: #054752;
  background-color: #EDEDED;
  border-radius: 16px;
  border: solid 1px #EDEDED;
  box-shadow: none;
}

.c2 .kirk-textField-wrapper--hasFocus {
  border: 3px solid #00AFF5;
}

.c2 .kirk-textField-wrapper--hasFocus input,
.c2 .kirk-textField-wrapper--hasFocus textarea {
  padding: calc(16px + 1px - 3px);
}

.c2 .kirk-textField-wrapper--hasFocus input {
  padding-right: 0;
}

.c2 input {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  border-radius: 16px;
  background-color: #EDEDED;
  color: #054752;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  line-height: 20px;
  width: 100%;
  caret-color: #00AFF5;
  padding: 16px;
}

.c2 input {
  padding-right: 0;
  font-family: inherit;
  margin-right: 48px;
}

.c2 input:not(:first-child) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  padding-left: 0;
}

.c2 input::-webkit-input-placeholder {
  color: #708C91;
}

.c2 input::-moz-placeholder {
  color: #708C91;
}

.c2 input:-ms-input-placeholder {
  color: #708C91;
}

.c2 input::placeholder {
  color: #708C91;
}

.c2 input::-ms-clear {
  display: none;
}

.c2 input[type='number']::-webkit-outer-spin-button,
.c2 input[type='number']::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

.c2 input[type='number'] {
  -moz-appearance: textfield;
  -webkit-appearance: none;
}

.c2 input[type='search'] {
  width: 100%;
  box-sizing: border-box;
}

.c2 input[type='number'],
.c2 input[type='search'] {
  box-shadow: none;
}

.c2 input:focus {
  border-color: #EDEDED;
  box-shadow: none;
  outline: none;
}

.c2.kirk-error .kirk-textField-wrapper {
  background: #FDD8DE;
  border: solid 1px #FDD8DE;
  -webkit-animation: textFieldError 500ms ease-in-out;
  animation: textFieldError 500ms ease-in-out;
}

.c2.kirk-error input {
  background-color: #FDD8DE;
}

.c2.kirk-error .kirk-error-message {
  color: #F53F5B;
  display: block;
  padding: 8px;
}

.c2 label {
  color: #054752;
  padding: 0 8px 4px 8px;
}

.c2 .kirk-button {
  background-color: transparent;
  color: #708C91;
  height: auto;
}

.c2 .kirk-textField-button {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
}

.c2 .kirk-textField-button[hidden] {
  visibility: hidden;
}

.c2.kirk-disabled {
  opacity: 0.5;
  cursor: default;
}

.c1 .section-content {
  padding-left: 24px;
  padding-right: 24px;
}

.c1 .section-content--noHorizontalSpacing {
  padding-left: 0;
  padding-right: 0;
}

.c0 .kirk-textfields-section-content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 .kirk-textfields-section-content .kirk-textField {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .kirk-textfields-section-content .kirk-textField:first-child {
  padding-right: 4px !important;
}

.c0 .kirk-textfields-section-content .kirk-textField:last-child {
  padding-left: 4px !important;
}

@media (min-width:800px) {
  .c1 .section-content {
    margin-left: auto;
    margin-right: auto;
    max-width: 662px;
  }

  .c1 .section-content.section-content--large {
    max-width: 1016px;
  }
}

<div
  className="c0 c1"
  role="presentation"
>
  <div
    className="section-content kirk-textfields-section-content section-content--noHorizontalSpacing"
  >
    <div
      className="kirk-textField c2"
    >
      <div
        className="kirk-textField-wrapper"
      >
        <input
          name="firstInputSecondRow"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="In-section input"
          type="text"
          value=""
        />
        
      </div>
    </div>
    <div
      className="kirk-textField c2"
    >
      <div
        className="kirk-textField-wrapper"
      >
        <input
          name="secondInputSecondRow"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="In-section input"
          type="text"
          value=""
        />
        
      </div>
    </div>
  </div>
</div>
`;

exports[`TextFieldsSection should render non-default textField section 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  padding-left: 24px !important;
  padding-right: 24px !important;
  margin-left: 0;
  margin-right: 0;
  padding: 8px 0;
}

.c2 .kirk-textField-wrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  color: #054752;
  background-color: #EDEDED;
  border-radius: 16px;
  border: solid 1px #EDEDED;
  box-shadow: none;
}

.c2 .kirk-textField-wrapper--hasFocus {
  border: 3px solid #00AFF5;
}

.c2 .kirk-textField-wrapper--hasFocus input,
.c2 .kirk-textField-wrapper--hasFocus textarea {
  padding: calc(16px + 1px - 3px);
}

.c2 .kirk-textField-wrapper--hasFocus input {
  padding-right: 0;
}

.c2 input {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  border-radius: 16px;
  background-color: #EDEDED;
  color: #054752;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  line-height: 20px;
  width: 100%;
  caret-color: #00AFF5;
  padding: 16px;
}

.c2 input {
  padding-right: 0;
  font-family: inherit;
  margin-right: 48px;
}

.c2 input:not(:first-child) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  padding-left: 0;
}

.c2 input::-webkit-input-placeholder {
  color: #708C91;
}

.c2 input::-moz-placeholder {
  color: #708C91;
}

.c2 input:-ms-input-placeholder {
  color: #708C91;
}

.c2 input::placeholder {
  color: #708C91;
}

.c2 input::-ms-clear {
  display: none;
}

.c2 input[type='number']::-webkit-outer-spin-button,
.c2 input[type='number']::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

.c2 input[type='number'] {
  -moz-appearance: textfield;
  -webkit-appearance: none;
}

.c2 input[type='search'] {
  width: 100%;
  box-sizing: border-box;
}

.c2 input[type='number'],
.c2 input[type='search'] {
  box-shadow: none;
}

.c2 input:focus {
  border-color: #EDEDED;
  box-shadow: none;
  outline: none;
}

.c2.kirk-error .kirk-textField-wrapper {
  background: #FDD8DE;
  border: solid 1px #FDD8DE;
  -webkit-animation: textFieldError 500ms ease-in-out;
  animation: textFieldError 500ms ease-in-out;
}

.c2.kirk-error input {
  background-color: #FDD8DE;
}

.c2.kirk-error .kirk-error-message {
  color: #F53F5B;
  display: block;
  padding: 8px;
}

.c2 label {
  color: #054752;
  padding: 0 8px 4px 8px;
}

.c2 .kirk-button {
  background-color: transparent;
  color: #708C91;
  height: auto;
}

.c2 .kirk-textField-button {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
}

.c2 .kirk-textField-button[hidden] {
  visibility: hidden;
}

.c2.kirk-disabled {
  opacity: 0.5;
  cursor: default;
}

.c1 .section-content {
  padding-left: 24px;
  padding-right: 24px;
}

.c1 .section-content--noHorizontalSpacing {
  padding-left: 0;
  padding-right: 0;
}

.c0 .kirk-textfields-section-content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 .kirk-textfields-section-content .kirk-textField {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .kirk-textfields-section-content .kirk-textField:first-child {
  padding-right: 4px !important;
}

.c0 .kirk-textfields-section-content .kirk-textField:last-child {
  padding-left: 4px !important;
}

@media (min-width:800px) {
  .c1 .section-content {
    margin-left: auto;
    margin-right: auto;
    max-width: 662px;
  }

  .c1 .section-content.section-content--large {
    max-width: 1016px;
  }
}

<div
  className="content c0 c1"
  role="presentation"
>
  <span
    className="section-content kirk-textfields-section-content section-content--noHorizontalSpacing"
  >
    <div
      className="kirk-textField c2"
    >
      <div
        className="kirk-textField-wrapper"
      >
        <input
          name="firstInputSecondRow"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="In-section input"
          type="text"
          value=""
        />
        
      </div>
    </div>
    <div
      className="kirk-textField c2"
    >
      <div
        className="kirk-textField-wrapper"
      >
        <input
          name="secondInputSecondRow"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="In-section input"
          type="text"
          value=""
        />
        
      </div>
    </div>
    <div
      className="kirk-textField c2"
    >
      <div
        className="kirk-textField-wrapper"
      >
        <input
          name="thirdInputSecondRow"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="In-section input"
          type="text"
          value=""
        />
        
      </div>
    </div>
  </span>
</div>
`;
